force-app/main/default/objects/Deployment_Record__c/Deployment_Record__c.object-meta.xml
<CustomObject>
    <label>Deployment Record</label>
    <nameField>
        <displayFormat>DEP-{00000}</displayFormat>
        <label>Deployment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>