force-app/main/default/objects/Deployment_Record__c/fields/Components_Count__c.field-meta.xml
<CustomField>
    <fullName>Components_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Components Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>