force-app/main/default/objects/Deployment_Record__c/fields/Deployed_By__c.field-meta.xml
<CustomField>
    <fullName>Deployed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Deployment Records</relationshipLabel>
    <relationshipName>Deployment_Records</relationshipName>
    <type>Lookup</type>
</CustomField>