force-app/main/default/objects/Deployment_Record__c/fields/Deployment_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Deployment_End_Time__c</fullName>
    <label>Deployment End Time</label>
    <type>DateTime</type>
</CustomField>