force-app/main/default/objects/Deployment_Record__c/fields/Deployment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Notes__c</fullName>
    <label>Deployment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>