force-app/main/default/objects/Deployment_Record__c/fields/Deployment_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Start_Time__c</fullName>
    <label>Deployment Start Time</label>
    <type>DateTime</type>
</CustomField>