force-app/main/default/objects/Deployment_Record__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <formula>IF(ISBLANK(Deployment_End_Time__c) || ISBLANK(Deployment_Start_Time__c), 0, 
               (Deployment_End_Time__c - Deployment_Start_Time__c) * 24 * 60)</formula>
    <label>Duration (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>