force-app/main/default/objects/Deployment_Record__c/fields/Failed_Components__c.field-meta.xml
<CustomField>
    <fullName>Failed_Components__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Failed Components</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>