force-app/main/default/objects/Deployment_Record__c/fields/Git_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Git_Branch_Name__c</fullName>
    <label>Git Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>