force-app/main/default/objects/Deployment_Record__c/fields/Git_Commit_Hash__c.field-meta.xml
<CustomField>
    <fullName>Git_Commit_Hash__c</fullName>
    <label>Git Commit Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>