force-app/main/default/objects/Deployment_Record__c/fields/Git_Repository_URL__c.field-meta.xml
<CustomField>
    <fullName>Git_Repository_URL__c</fullName>
    <label>Git Repository URL</label>
    <type>Url</type>
</CustomField>