force-app/main/default/objects/Deployment_Record__c/fields/Success_Components__c.field-meta.xml
<CustomField>
    <fullName>Success_Components__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Success Components</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>