force-app/main/default/objects/Deployment_Record__c/fields/Success_Rate__c.field-meta.xml
<CustomField>
    <fullName>Success_Rate__c</fullName>
    <formula>IF(Components_Count__c = 0, 0, 
               (Success_Components__c / Components_Count__c) * 100)</formula>
    <label>Success Rate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>